# brian2cuda

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  CITATION.cff  MANIFEST.in  README.md  brian2  init_genn  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish_to_pypi.yml
benchmarks/: create_readme.py  run_speed_tests.py
brian2cuda/: __init__.py  _version.py  binomial.py  codeobject.py  cuda_generator.py  cuda_prefs.py  device.py  run_feature_tests.py  test_configuration.py  timedarray.py
brian2cuda/brianlib/: clocks.h  cudaVector.h  cuda_utils.h  curand_buffer.h  (+2 more)
consistency_test/: BrunelHakimHeterogDelays.py  BrunelHakimHeterogDelaysNarrowDistr.py  BrunelHakimHomogDelays.py  COBAHH.py  COBAHHPseudocoupled1000.py  COBAHHPseudocoupled80.py  COBAHHUncoupled.py  MushroomBody.py  STDPCUDA.py  STDPCUDAHeterogeneousDelays.py  STDPCUDAHomogeneousDelays.py  consistency_test.py  consistency_test_runner.sh  results_2021_09_22__18_45_29.txt  utils.py
docs_sphinx/: conf.py  index.rst
examples/: STDP_multipost_neuronaltraces_standalone_cpp.py  STDP_multipost_standalone_cpp.py  STDP_multipost_standalone_cuda.py  STDP_neuronaltraces_standalone_cpp.py  STDP_neuronaltraces_standalone_cuda.py  STDP_standalone_cpp.py  STDP_standalone_cuda.py  TODO.txt  brunelhakim.py  cobahh.py  combine_plots.sh  cuba.py  cuba_cpp.py  cuba_cuda.py  cuba_distdelays_cpp.py  cuba_distdelays_cuda.py  figures.mplstyle  mushroombody.py  run_all.sh  run_examples.sh  stdp.py  utils.py
frozen_repos/: brian2.diff  brian2genn.diff  init_genn  init_genn.sh  submodules_update.sh  update_brian2.sh  update_brian2genn.sh
speed_up/: MushroomBody_genn.py  output.txt  requirements.txt
(+1634 files in other folders)
